More science words and correct science image reduction

--- a/notebooks/06.00-Reducing-science-images.ipynb
+++ b/notebooks/06.00-Reducing-science-images.ipynb
@@ -91,6 +91,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data in this example is from chip 0 of the Large Format Camera at Palomar Observatory. In earlier notebooks we determined that: \n",
+    "\n",
+    "+ This CCD has a [useful overscan region]().\n",
+    "+ There is [no need to scale dark frames]() in this data, and so no need to subtract bias.\n",
+    "\n",
+    "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated data, and define variables for the image type of the flat field and the science images (there are, unfortunately, no standard names for these). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -100,9 +112,17 @@
     "\n",
     "science_imagetyp = 'object'\n",
     "flat_imagetyp = 'flatfield'\n",
+    "exposure = 'exptime'\n",
     "\n",
-    "ifc_reduced = ccdp.ImageFileCollection('example1-reduced')\n",
+    "ifc_reduced = ccdp.ImageFileCollection(reduced_path)\n",
     "ifc_raw = ccdp.ImageFileCollection('python_imred_data')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, a quick look at the science images in this data set."
    ]
   },
   {
@@ -112,35 +132,14 @@
    "outputs": [],
    "source": [
     "lights = ifc_raw.summary[ifc_raw.summary['imagetyp'] == science_imagetyp.upper()]\n",
-    "lights['date-obs', 'file', 'object', 'filter', 'exptime']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "combined_darks = {ccd.header['exptime']: ccd for ccd in ifc_reduced.ccds(imagetyp='dark', combined=True)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "calibs = {}\n",
-    "for im_type in ['bias', 'dark', flat_imagetyp]:\n",
-    "    calibs[im_type] = [ccd for ccd in ifc_reduced.ccds(imagetyp=im_type, combined=True)]"
+    "lights['date-obs', 'file', 'object', 'filter', exposure]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# THIS IS BAD NEED TO FIND MATCHING DARK EXPOSURE TIME!! \n",
-    "# AND MATCHING FLAT FILTER!!!!"
+    "Next, a look at the calibrated combined images available to us."
    ]
   },
   {
@@ -149,48 +148,105 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "combo_calibs = ifc_reduced.summary[ifc_reduced.summary['combined'].filled(False).astype('bool')]\n",
+    "combo_calibs['date-obs', 'file', 'imagetyp', 'object', 'filter', exposure]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Both of these images will use the 300 second dark exposure to remove dark current and there is a flat field image for each of the two filters present in the data. \n",
+    "\n",
+    "Though we could hard code which dark to use, it is straightforward to set up a dictionary for accessing the darks, and a separate for accessing the science images. The goal is to write code that  is more easily reused."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_darks = {ccd.header[exposure]: ccd for ccd in ifc_reduced.ccds(imagetyp='dark', combined=True)}\n",
+    "combined_flats = {ccd.header['filter']: ccd for ccd in ifc_reduced.ccds(imagetyp=flat_imagetyp, combined=True)}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The calibration steps for each of these science images are:\n",
+    "\n",
+    "+ Subtract the overscan from the science image\n",
+    "+ Trim the overscan\n",
+    "+ Subtract the dark current (which in this case also includes the bias)\n",
+    "+ Flat correct the image\n",
+    "\n",
+    "These are the minimum steps needed to calibrate. Gain correcting the data and identifying cosmic rays are additional steps that might often be done at this stage. Identification of cosmic rays will be discussed in [this notebook]()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# These two lists are created so that we have copies of the raw and calibrated images\n",
+    "# to later in the notebook. They are not ordinarily required.\n",
     "all_reds = []\n",
     "light_ccds = []\n",
     "for light, file_name in ifc_raw.ccds(imagetyp=science_imagetyp, return_fname=True, ccd_kwargs=dict(unit='adu')):\n",
     "    light_ccds.append(light)\n",
+    "    \n",
     "    reduced = ccdp.subtract_overscan(light, overscan=light[:, 2055:], median=True)\n",
-    "    reduced = ccdp.trim_image(light[:, :2048])\n",
-    "    #reduced = ccdp.subtract_bias(reduced, calibs['bias'][0])\n",
+    "    \n",
+    "    reduced = ccdp.trim_image(reduced[:, :2048])\n",
+    "\n",
     "    closest_dark = find_nearest_dark_exposure(reduced, combined_darks.keys())\n",
-    "    reduced = ccdp.subtract_dark(reduced, combined_darks[closest_dark], exposure_time='exptime', exposure_unit=u.second)\n",
-    "    good_flat = [c for c in calibs[flat_imagetyp] if c.header['filter'] == light.header['filter']][0]\n",
+    "    reduced = ccdp.subtract_dark(reduced, combined_darks[closest_dark],\n",
+    "                                 exposure_time=exposure, exposure_unit=u.second\n",
+    "                                )\n",
+    "    good_flat = combined_flats[reduced.header['filter']]\n",
     "    reduced = ccdp.flat_correct(reduced, good_flat)\n",
     "    all_reds.append(reduced)\n",
     "    reduced.write(reduced_path / file_name)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "which_light = 1\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
-    "filt = light_ccds[which_light].header['filter']\n",
-    "axes[0].set_title('Uncalibrated image {}'.format(filt))\n",
-    "show_image(light_ccds[which_light], cmap='gray', ax=axes[0], fig=fig, percl=90)\n",
+    "### Example 1: before and after\n",
     "\n",
-    "axes[1].set_title('Calibrated image')\n",
-    "show_image(all_reds[which_light].data, cmap='gray', ax=axes[1], fig=fig, percl=90)"
+    "The cell below displays each science image before and after calibration."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 20), tight_layout=True)\n",
+    "\n",
+    "for row, raw_science_image in enumerate(light_ccds):\n",
+    "    filt = raw_science_image.header['filter']\n",
+    "    axes[row, 0].set_title('Uncalibrated image {}'.format(filt))\n",
+    "    show_image(raw_science_image, cmap='gray', ax=axes[row, 0], fig=fig, percl=90)\n",
+    "\n",
+    "    axes[row, 1].set_title('Calibrated image {}'.format(filt))\n",
+    "    show_image(all_reds[row].data, cmap='gray', ax=axes[row, 1], fig=fig, percl=90)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
    "source": [
-    "show_image(combined_darks[300], cmap='gray', percl=80)\n",
-    "show_image(calibs['bias'][0], cmap='gray', percl=80)\n",
-    "show_image(calibs[flat_imagetyp][0], cmap='gray', percl=90)"
+    "In each reduced image the overall pattern in the flat field has been removed, and the sensor glow along the left edge and in the bottom left corner of the uncalibrated images has been removed. The background in the calibrated images is still not perfectly uniform, though that background can be removed using photutils if desired. The partial bad column visible in both uncalibrated images is also still present in the calibrated images, particularly in the `g'` filter. \n",
+    "\n",
+    "Those pixels will need to be masked, as described in the [notebook on bad pixels]()."
    ]
   },
   {
@@ -198,6 +254,18 @@
    "metadata": {},
    "source": [
     "## Example 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The camera in this example is a thermo-electrically cooled Andor Aspen CG16M. In previous notebooks we decided that:\n",
+    "\n",
+    "+ The overscan region of this camera is not useful.\n",
+    "+ For this data set the dark frames needed to be scaled, so we need to subtract the bias frame from each science image.\n",
+    "\n",
+    "First, we create [ImageFileCollection](https://ccdproc.readthedocs.io/en/latest/ccdproc/image_management.html)s for the raw data and the calibrated data, and define variables for the image type of the flat field and the science images (there are, unfortunately, no standard names for these). "
    ]
   },
   {
@@ -209,8 +277,10 @@
     "reduced_path = Path('example2-reduced')\n",
     "\n",
     "science_imagetyp = 'light'\n",
+    "flat_imagetyp = 'flat'\n",
+    "exposure = 'exposure'\n",
     "\n",
-    "ifc_reduced = ccdp.ImageFileCollection('example2-reduced')\n",
+    "ifc_reduced = ccdp.ImageFileCollection(reduced_path)\n",
     "ifc_raw = ccdp.ImageFileCollection('example-thermo-electric')"
    ]
   },
@@ -218,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grab the light images..."
+    "Next, we check what science images are available."
    ]
   },
   {
@@ -230,14 +300,16 @@
    "outputs": [],
    "source": [
     "lights = ifc_raw.summary[ifc_raw.summary['imagetyp'] == science_imagetyp.upper()]\n",
-    "lights['date-obs', 'file', 'object', 'filter', 'exposure']"
+    "lights['date-obs', 'file', 'object', 'filter', exposure]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Grab some calibration frames"
+    "There are only two science images, both in the same filter and with the same exposure time.\n",
+    "\n",
+    "The combined calibration images available are listed below."
    ]
   },
   {
@@ -246,18 +318,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calibs = {}\n",
-    "for im_type in ['bias', 'dark', 'flat']:\n",
-    "    calibs[im_type] = [ccd for ccd in ifc_reduced.ccds(imagetyp=im_type, combined=True)]"
+    "combo_calibs = ifc_reduced.summary[ifc_reduced.summary['combined'].filled(False).astype('bool')]\n",
+    "combo_calibs['date-obs', 'file', 'imagetyp', 'object', 'filter', exposure]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's reduce them all...\n",
+    "Although there is only one of each type of combined calibration image, the code below sets up a dictionary for the flats and darks. That code will work in a more typical night when there might be several filters and multiple exposure times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combined_darks = {ccd.header[exposure]: ccd for ccd in ifc_reduced.ccds(imagetyp='dark', combined=True)}\n",
+    "combined_flats = {ccd.header['filter']: ccd for ccd in ifc_reduced.ccds(imagetyp=flat_imagetyp, combined=True)}\n",
     "\n",
-    "# BUT FIX THE FACT THAT WE ARE NOT MATCHING WE ARE JUST GRABBING THE FIRST ONE!"
+    "# There is only on bias, so no need to set up a dictionary.\n",
+    "combined_bias = [ccd for ccd in ifc_reduced.ccds(imagetyp='bias', combined=True)][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The calibration steps for each of these science images is:\n",
+    "\n",
+    "+ Trim the overscan\n",
+    "+ Subtract bias, because bias was subtracted from the dark frames\n",
+    "+ Subtract dark, using the dark closest in exposure time to the science image.\n",
+    "+ Flat correct the images, using the combined flat whose filter matches the science image."
    ]
   },
   {
@@ -268,12 +362,22 @@
    "source": [
     "all_reds = []\n",
     "light_ccds = []\n",
-    "for light, file_name in ifc_raw.ccds(imagetyp='light', return_fname=True):\n",
+    "for light, file_name in ifc_raw.ccds(imagetyp=science_imagetyp, return_fname=True):\n",
     "    light_ccds.append(light)\n",
+    "\n",
     "    reduced = ccdp.trim_image(light[:, :4096])\n",
-    "    reduced = ccdp.subtract_bias(reduced, calibs['bias'][0])\n",
-    "    reduced = ccdp.subtract_dark(reduced, calibs['dark'][0], exposure_time='exptime', exposure_unit=u.second)\n",
-    "    reduced = ccdp.flat_correct(reduced, calibs['flat'][0])\n",
+    "    \n",
+    "    # Note that the first argument in the remainder of the ccdproc calls is\n",
+    "    # the *reduced* image, so that the calibration steps are cumulative.\n",
+    "    reduced = ccdp.subtract_bias(reduced, combined_bias)\n",
+    "    \n",
+    "    closest_dark = find_nearest_dark_exposure(reduced, combined_darks.keys())\n",
+    "\n",
+    "    reduced = ccdp.subtract_dark(reduced, combined_darks[closest_dark], \n",
+    "                                 exposure_time='exptime', exposure_unit=u.second)\n",
+    "    \n",
+    "    good_flat = combined_flats[reduced.header['filter']]\n",
+    "    reduced = ccdp.flat_correct(reduced, good_flat)\n",
     "    all_reds.append(reduced)\n",
     "    reduced.write(reduced_path / file_name)"
    ]
@@ -284,30 +388,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "which_light = 0\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(10, 10), tight_layout=True)\n",
     "\n",
-    "axes[0].set_title('Uncalibrated image')\n",
-    "show_image(light_ccds[which_light], cmap='gray', ax=axes[0], fig=fig, percl=90)\n",
+    "for row, raw_science_image in enumerate(light_ccds):\n",
+    "    filt = raw_science_image.header['filter']\n",
+    "    axes[row, 0].set_title('Uncalibrated image {}'.format(filt))\n",
+    "    show_image(raw_science_image, cmap='gray', ax=axes[row, 0], fig=fig, percl=90)\n",
     "\n",
-    "axes[1].set_title('Calibrated image')\n",
-    "show_image(all_reds[which_light].data, cmap='gray', ax=axes[1], fig=fig, percl=90)"
+    "    axes[row, 1].set_title('Calibrated image {}'.format(filt))\n",
+    "    show_image(all_reds[row].data, cmap='gray', ax=axes[row, 1], fig=fig, percl=90)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "which_light = 1\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(20, 10))\n",
+    "In both images most of the nonunifomity in the background has been removed along the bright column and the sensor glow on the left and right edges of the uncalibrated images.\n",
     "\n",
-    "axes[0].set_title('Uncalibrated image')\n",
-    "show_image(light_ccds[which_light], cmap='gray', ax=axes[0], fig=fig, percl=90)\n",
-    "\n",
-    "axes[1].set_title('Calibrated image')\n",
-    "show_image(all_reds[which_light].data, cmap='gray', ax=axes[1], fig=fig, percl=90)"
+    "The calibrated image in the top row looks like flat correction has led to a fairly uniform background. The background in the image in the second row is not that uniform. As it turns out the second image was taken much closer to dawn than the first image, so the sky background really was not uniform when the image was taken."
    ]
   }
  ],
