Update notebook on creating mask

--- a/notebooks/04.02-Creating-a-mask.ipynb
+++ b/notebooks/04.02-Creating-a-mask.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Creating a mask\n"
+    "# Creating an image mask\n",
+    "\n",
+    "Calibration cannot compensate for every defect in a CCD. Some examples (a non-exhaustive list):\n",
+    "\n",
+    "+ Some hot pixels are not actually linear with exposure time.\n",
+    "+ Some pixels in the CCD may respond less to light than others in a way that flat frames cannot compensate for.\n",
+    "+ There may be defects in all or part of a row or column of the chip.\n",
+    "+ Cosmic rays strike the CCD during every exposure. While those are eliminated in the combined calibrated frames with the proper choice of combination parameters, they are not removed from science images.\n",
+    "\n",
+    "The first three are discussed in this notebook. Removal of cosmic rays from science images is discussed [in the cosmic ray notebook]()"
    ]
   },
   {
@@ -22,6 +31,101 @@
     "import ccdproc as ccdp\n",
     "from photutils import detect_sources\n",
     "from astrowidgets import ImageWidget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detecting bad pixels with `ccdmask`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The ccdproc function [ccdmask](https://ccdproc.readthedocs.io/en/latest/api/ccdproc.ccdmask.html#ccdproc.ccdmask) uses an method that is based on the [IRAF task ccdmask](http://stsdas.stsci.edu/cgi-bin/gethelp.cgi?ccdmask). The method works best when the input image used to detect flaws in the CCD is the ratio of two flat frames with different exposure times. That may or may not be available depending on what images are collected. In the example below, which uses images from Example 2 in the reduction notebooks, the two extreme exposure times are 1 sec and 1.2 sec, which is not ideal. \n",
+    "\n",
+    "We begin by creating an image collection and then the information for all of the calibrated, uncombined, flat images."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ex2_path = Path('example2-reduced')\n",
+    "\n",
+    "ifc = ccdp.ImageFileCollection(ex2_path)\n",
+    "ifc.summary.remove_columns(['history', 'comment'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flats = (ifc.summary['imagetyp'] == 'FLAT') & (ifc.summary['combined'] != True)\n",
+    "ifc.summary[flats]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The best we can do here is the ratio of the first and last of the flat images listed above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first = ifc.summary['file'][flats][0]\n",
+    "last = ifc.summary['file'][flats][-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ccd1 = CCDData.read(ex2_path / first)\n",
+    "ccd2 = CCDData.read(ex2_path / last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ratio = ccd2.divide(ccd1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "maskr = ccdp.ccdmask(ratio)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STILL TO DISCUSS:\n",
+    "\n",
+    "+ Bad spot at `iw.center_on((3823, 2446))`\n",
+    "+ Bad column at left edge\n",
+    "+ hot pixel?? at `iw.center_on((3016, 3930))`"
    ]
   },
   {
@@ -52,48 +156,6 @@
     "\n",
     "+ Using `photutils` to generate segmentation maps from the mask is awesome. Makes it much easier to assess the cosmic ray detection and to view big bad spots from `ccdmask`.\n",
     "+ Couple that with the image viewer and joy is to be had!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ex2_path = Path('example2-reduced')\n",
-    "\n",
-    "ifc = ccdp.ImageFileCollection(ex2_path)\n",
-    "ifc.summary.remove_columns(['history', 'comment'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "flats = (ifc.summary['imagetyp'] == 'FLAT') & (ifc.summary['combined'] != True)\n",
-    "ifc.summary[flats]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first = ifc.summary['file'][flats][0]\n",
-    "last = ifc.summary['file'][flats][-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ccd1 = CCDData.read(ex2_path / first)\n",
-    "ccd2 = CCDData.read(ex2_path / last)"
    ]
   },
   {
@@ -139,25 +201,6 @@
    "outputs": [],
    "source": [
     "iw"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratio = ccd2.divide(ccd1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "maskr = ccdp.ccdmask(ratio)"
    ]
   },
   {
@@ -254,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmp.colors"
+    "segm.data.max()"
    ]
   },
   {
@@ -264,8 +307,8 @@
    "outputs": [],
    "source": [
     "#iw.load_array(segm.data)\n",
-    "#iw.load_array(maskr)\n",
-    "iw.load_array(dmask)\n",
+    "iw.load_array(maskr)\n",
+    "#iw.load_array(dmask)\n",
     "#iw.load_array(dark1000.data)"
    ]
   },
@@ -275,6 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Known bad spot in the chip\n",
+    "iw.center_on((3823, 2446))\n",
     "# This is a hot pixel that clearly shows up as a dark spot in other images\n",
     "# i.e. it is not well-modeled by the dark frames.\n",
     "iw.center_on((3016, 3930))\n",
@@ -296,7 +341,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dark1000 = CCDData.read('master_dark_exposure_1000.0.fit.bz2')"
+    "dark1000 = CCDData.read('master_dark_exposure_1000.0.fit')"
    ]
   },
   {
@@ -314,7 +359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dmask = dark1000.data[:, :4096] > 10"
+    "dmask = dark1000.data[:, :4096] > 1"
    ]
   },
   {
@@ -342,6 +387,15 @@
    "outputs": [],
    "source": [
     "in_both.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maskr.sum()"
    ]
   },
   {
